<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <Button
                android:id="@+id/fourStep"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/corners_bg"
                android:text="@string/four_step" />

            <Button
                android:id="@+id/find"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/corners_bg"
                android:text="@string/find" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/cardDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="#00ff00"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardDays"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/card_days"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/learnWordNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_toLeftOf="@+id/accumulate"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/accumulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/accumulate_learn_word_days"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/masterWordNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_toLeftOf="@+id/master"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="70dp"
                android:layout_marginTop="60dp"
                android:text="@string/master_word_num"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/today_learn_plan"
                android:textColor="#000000"
                android:textSize="25sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/root"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/rootsTodayNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:textColor="#000000"
                android:textSize="25sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/prefix"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/prefix"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/prefixTodayNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_centerVertical="true"
                android:textColor="#000000"
                android:textSize="25sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/suffix"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/suffix"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/suffixTodayNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#000000"
                android:textSize="25sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/word"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wordTodayNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:textColor="#000000"
                android:textSize="25sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@drawable/corners_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:text="@string/learn"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@drawable/corners_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:text="@string/dashboard"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@drawable/corners_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textColor="#000000" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>